--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource-variable/fraunces": "^5.0.21"
+		"@fontsource-variable/fraunces": "^5.0.21",
+		"gray-matter": "^4.0.3",
+		"marked": "^12.0.2",
+		"svelte-routing": "^2.13.0"
 	}
 }
