--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
 	"type": "module",
 	"dependencies": {
 		"@fontsource-variable/fraunces": "^5.0.21",
+		"fs": "^0.0.1-security",
 		"gray-matter": "^4.0.3",
 		"marked": "^12.0.2",
+		"path": "^0.12.7",
 		"svelte-routing": "^2.13.0"
 	}
 }
