--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/express": "^4.17.21",
+		"@types/node": "^20.14.8",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"svelte-preprocess": "^5.1.4",
@@ -23,6 +25,8 @@
 	"type": "module",
 	"dependencies": {
 		"@fontsource-variable/fraunces": "^5.0.21",
+		"expres": "^0.0.5",
+		"express": "^4.19.2",
 		"fs": "^0.0.1-security",
 		"gray-matter": "^4.0.3",
 		"marked": "^12.0.2",
