--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,24 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
-	  "allowJs": true,
-	  "checkJs": true,
-	  "esModuleInterop": true,
-	  "forceConsistentCasingInFileNames": true,
-	  "resolveJsonModule": true,
-	  "skipLibCheck": true,
-	  "sourceMap": true,
-	  "strict": true,
-	  "moduleResolution": "node",
-	  "baseUrl": ".",
-	  "paths": {
-		"svelte-routing/*": ["./node_modules/svelte-routing/*"]
-	  }
-	}
-  }
-  
+		"allowJs": true,
+		"checkJs": true,
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"resolveJsonModule": true,
+		"skipLibCheck": true,
+		"sourceMap": true,
+		"strict": true,
+		"moduleResolution": "node",
+		// "baseUrl": ".",
+		// "paths": {
+		// 	"svelte-routing/*": [
+		// 		"./node_modules/svelte-routing/*"
+		// 	],
+		// 	"$lib/*": [
+		// 		"src/lib/*"
+		// 	]
+		// }
+	},
+	"include": ["src/**/*", "node_modules/svelte-routing/**/*"]
+}
