--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,12 +1,20 @@
 {
     "version": "0.2.0",
     "configurations": [
-        {
-            "type": "chrome",
-            "request": "launch",
-            "name": "Launch Chrome against dev server",
-            "url": "http://localhost:5173",
-            "webRoot": "${workspaceFolder}",
-        }
+      {
+        "type": "node",
+        "request": "launch",
+        "name": "Run npm dev with --open",
+        "runtimeExecutable": "npm",
+        "runtimeArgs": [
+          "run",
+          "dev",
+          "--",
+          "--open"  // Pass --open to the dev script
+        ],
+        "console": "integratedTerminal",
+        "skipFiles": ["<node_internals>/**"]
+      }
     ]
-}
+  }
+  
