--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@testing-library/dom": "^10.4.0",
+		"@testing-library/svelte": "^5.2.1",
+		"@testing-library/user-event": "^14.5.2",
 		"@types/express": "^4.17.21",
+		"@types/jest": "^29.5.13",
 		"@types/node": "^20.14.8",
+		"jest": "^29.7.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"svelte-preprocess": "^5.1.4",
@@ -30,6 +35,7 @@
 		"fs": "^0.0.1-security",
 		"gray-matter": "^4.0.3",
 		"marked": "^12.0.2",
+		"msw": "^2.4.6",
 		"path": "^0.12.7",
 		"svelte-routing": "^2.13.0"
 	}
