--- a/package.json
+++ b/package.json
@@ -32,11 +32,10 @@
 		"@fontsource-variable/fraunces": "^5.0.21",
 		"expres": "^0.0.5",
 		"express": "^4.19.2",
-		"fs": "^0.0.1-security",
 		"gray-matter": "^4.0.3",
 		"marked": "^12.0.2",
 		"msw": "^2.4.6",
-		"path": "^0.12.7",
+		"svelte-markdown": "^0.4.1",
 		"svelte-routing": "^2.13.0"
 	}
 }
