--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@types/express": "^4.17.21",
 		"@types/jest": "^29.5.13",
 		"@types/node": "^20.14.8",
+		"@types/prismjs": "^1.26.5",
 		"jest": "^29.7.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
@@ -35,6 +36,7 @@
 		"gray-matter": "^4.0.3",
 		"marked": "^5.1.2",
 		"msw": "^2.4.6",
+		"prismjs": "^1.30.0",
 		"svelte-markdown": "^0.4.1",
 		"svelte-routing": "^2.13.0"
 	}
