--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
 	},
 	"engines": {
-		"node": "20.x"
+		"node": ">=20"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
@@ -29,7 +29,8 @@
 		"svelte-check": "^3.6.0",
 		"svelte-preprocess": "^5.1.4",
 		"typescript": "^5.4.5",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"vite-plugin-string": "^1.2.3"
 	},
 	"type": "module",
 	"dependencies": {
