--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
 	},
 	"engines": {
-		"node": ">=20"
+		"node": "20"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
